# pacman

./: .gitignore  meson.build
doc/: PKGBUILD.5.asciidoc  makepkg.8.asciidoc  makepkg.conf.5.asciidoc
etc/: makepkg.conf.in
lib/libalpm/: add.c  alpm.h  be_local.c  be_sync.c  cpu_capabilities.c  dload.c  meson.build  package.c  package.h  sync.c  util.c
lib/libalpm/po/: ar.po  ast.po  az_AZ.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  libalpm.pot  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  (+5 more)
scripts/: .gitignore  makepkg.sh.in  meson.build  pacman-key.sh.in
scripts/libmakepkg/integrity/: generate_signature.sh.in  verify_signature.sh.in
scripts/libmakepkg/lint_config/: variable.sh.in
scripts/libmakepkg/lint_pkgbuild/: arch.sh.in
scripts/libmakepkg/tidy/: strip.sh.in
scripts/libmakepkg/util/: config.sh.in
scripts/po/: az_AZ.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fi.po  fr.po  gl.po  hi.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  pacman-scripts.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po  (+1 more)
scripts/repo-add/: .gitignore  Cargo.toml  makepkg.conf  meson.build  rustfmt.toml  xz-5.4.5-2-x86_64.pkg.tar.zst  xz-5.4.5-2-x86_64.pkg.tar.zst.sig  xz-files  xz-pkginfo
scripts/repo-add/src/: config.rs.in  database_sqlite.rs  main.rs  meson.build  parse_args.rs  pkginfo.rs  utils.rs
src/pacman/: callback.c  conf.c  meson.build  package.c  sync.c  update-notice.c  update-notice.h  util.c
src/pacman/po/: ar.po  ast.po  az_AZ.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  pacman.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  (+4 more)
test/pacman/: pmtest.py
